@@ -3,7 +3,7 @@ AUX phidget21-java.patch 716 RMD160 7fd30e15aa9b89d7395c74cbf8b413f2aabff795 SHA
 AUX phidget21-libdir.patch 559 RMD160 133c0473c42003e00d90e2c60af5e94dd91d8b09 SHA1 fd5a67307f08a8ca1f9b751114d0bc3aff3daae5 SHA256 f17604ededb52a5dd1ef4e71c25d8ccb09bb5ecb15bee1b9c0cc38ce19e01072
 DIST Phidgetlinux_2.1.5.20090105.tar.gz 316490 RMD160 0c0088eee842b7b4b723867c08964557c665b9aa SHA1 484fa7c170e412e9513d5f08e883a5efd9a7c366 SHA256 bfaaaf2aa21c854b2f0305ed6b55605d336b6b890eedf40ead0e17b419b7ac33
 DIST Phidgetlinux_2.1.6.20090430.tar.gz 342985 RMD160 a45e335c4672e918152537cd771bcd4b21a85ddf SHA1 60fadd7ba15342b2ad6c58b19d659532fe963513 SHA256 b1cf06ecae292c2b201c30878fa2e89c2251d8a0b994a9227870a7ce52dc2605
-EBUILD phidget-2.1.5.20090105.ebuild 1524 RMD160 e74615383c03bcbe58890e0849a71d1e1207d961 SHA1 eb8a619f9394d9ad06dea13978cf32ec32b72aa9 SHA256 6bc195ace5ece3576aeda71303cf338abfa400edfa4d2a7d683487bc7654bfa6
-EBUILD phidget-2.1.6.20090430.ebuild 1524 RMD160 e74615383c03bcbe58890e0849a71d1e1207d961 SHA1 eb8a619f9394d9ad06dea13978cf32ec32b72aa9 SHA256 6bc195ace5ece3576aeda71303cf338abfa400edfa4d2a7d683487bc7654bfa6
-MISC ChangeLog 2454 RMD160 69a068b656640fd7a26746fab33f40001d5c904b SHA1 20467bf624133692ef10ad82aca5f92f77b97259 SHA256 09d420c30f2af5807818997edbb0c6995f922a1613ca7b222f8038cf61350f04
+EBUILD phidget-2.1.5.20090105.ebuild 1672 RMD160 9f2cffc055a086710fa824d9972ddbfb97c9f513 SHA1 3810a2b7a60e22198f12afea9e049bb468320635 SHA256 e4ffa6bc1fb64bbe5d9d418fb86ab334f32d7c0b31b6e68677e27f0e86ba02fb
+EBUILD phidget-2.1.6.20090430.ebuild 1672 RMD160 9f2cffc055a086710fa824d9972ddbfb97c9f513 SHA1 3810a2b7a60e22198f12afea9e049bb468320635 SHA256 e4ffa6bc1fb64bbe5d9d418fb86ab334f32d7c0b31b6e68677e27f0e86ba02fb
+MISC ChangeLog 2668 RMD160 6a4643720175649408a16437a2a1acb0274c35fa SHA1 3905661c73cdf4d9a8bd79b7f36a55a4274c19f4 SHA256 8a0dc9a70b37ddccc5a30b507ee523474c00733078376c5af4bd022ac31036a2
 MISC metadata.xml 172 RMD160 ac9d8165526474ed01605b242677b133677d627e SHA1 379fab1397357de050c74be1cbbb2da37ee3fcdd SHA256 74bc726733e7fd45be5b7a40fe34b62f1502551d6ee5797e65fc75522ead5972
